--- a/src/css/styles/base.css
+++ b/src/css/styles/base.css
@@ -18,23 +18,23 @@
   p {
     vertical-align: middle;
   }
-  
-  
-  p {
-    display: flex;
-    align-items: center;
-    color: black;
-  }
-  
+    
   img {
     max-width: 100%;
   }
   
-  .grid {
+  .landing-grid {
     width: 90%;
     display: grid;
     grid-template-rows: repeat(15, 1fr);
     grid-template-columns: repeat(1, 1fr);
+  }
+
+  .landing-grid p {
+    display: flex;
+    align-items: center;
+    color: #FFFFFF;
+    font-family: sans-serif;
   }
   
   .wrap {
@@ -56,7 +56,7 @@
     grid-row-start: 3;
     grid-row-end: 4;
     display: flex;
-    transform: translateX(0em) translateY(0em);
+    transform: translateX(3.8em) translateY(2em);
   }
   
   .facebook {
