--- a/site/layouts/partials/landing.html
+++ b/site/layouts/partials/landing.html
@@ -1,52 +1,111 @@
+<div class="background" id="p5">
+  <div class="grid">
+    <div class="gmail">
+      <a href="">
+          <img src="images/icons/webloc.png" alt="">
+      </a>
+    </div>
 
-<div class="landing-grid" id="p5">
-      <div class="gmail">
-        <img src="images/icons/webloc.png" alt="">
-        <p>Boîte de réception (5) - raarlabel@gmail.com - Gmail</p>
-      </div>
-  
-      <div class="twitter">
-        <img src="images/icons/at.png" alt="">
-        <p>RAAR Label (@LabelRAAR) | twitter</p>
-      </div>
-  
-      <div class="facebook">
-        <img src="images/icons/at.png" alt="">
-        <p>RAAR Label | facebook</p>
-      </div>
-  
-      <div class="vinyl">
-        <img src="images/icons/webloc.png" alt="">
-        <p>ORDER ¬ Vinyl | Factory RAAR04</p>
-      </div>
-  
-      <div class="digital">
-        <img src="images/icons/webloc.png" alt="">
-        <p>ORDER ¬ Digital | Factory RAAR04</p>
-      </div>
-  
-      <div class="code">
-        <img src="images/icons/terminal.png" alt="">
-        <p>wwwCode%45%72%73%6f%6e%20%52%79%62%6f%64</p>
-      </div>
-  
-      <div class="releases">
-        <img src="images/icons/at.png" alt="">
-        <p>ReleaseDownload</p>
-      </div>
-  
-      <div class="paypal">
-        <img src="images/icons/webloc.png" alt="">
-        <p class="wrap">PAYPAL__donations&business=raarlabef.html</p>
-      </div>
-  
-      <div class="about">
-        <img src="images/icons/rtf.png" alt="">
-        <p>RAAR.rtf</p>
-      </div>
-  
-      <div class="logo">
-        <img src="images/icons/raar.jpg" alt="">
-        <p>visual.png</p>
-      </div>
+    <div class="gmail-text">
+      <p>Boîte de réception (5) - raarlabel@gmail.com - Gmail</p>
+    </div>
+
+    <!-- <div class="twitter">
+      <a href="">
+          <img src="images/icons/at.png" alt="">
+      </a>
+    </div>
+
+    <div class="">
+      <p>RAAR Label (@LabelRAAR) | twitter</p>
+    </div>
+
+
+    <div class="facebook">
+      <a href="">
+          <img src="images/icons/at.png" alt="">
+      </a>
+    </div>
+
+    <div class="">
+      <p>RAAR Label | facebook</p>
+    </div>
+
+
+    <div class="vinyl">
+      <a href="">
+          <img src="images/icons/webloc.png" alt="">
+      </a>
+    </div>
+
+    <div class="">
+      <p>ORDER ¬ Vinyl | Factory RAAR04</p>
+    </div>
+
+
+    <div class="digital">
+      <a href="">
+          <img src="images/icons/webloc.png" alt="">
+      </a>
+    </div>
+
+    <div class="">
+      <p>ORDER ¬ Digital | Factory RAAR04</p>
+    </div>
+
+
+    <div class="code">
+      <a href="">
+          <img src="images/icons/terminal.png" alt=""> 
+      </a>
+    </div>
+
+    <div class="">
+      <p>wwwCode%45%72%73%6f%6e%20%52%79%62%6f%64</p>
+    </div>
+
+
+    <div class="releases">
+      <a href="">
+          <img src="images/icons/at.png" alt="">
+      </a>
+    </div>
+
+    <div class="">
+      <p>ReleaseDownload</p>
+    </div>
+
+
+    <div class="paypal">
+      <a href="">
+          <img src="images/icons/webloc.png" alt="">
+      </a>
+    </div>
+
+    <div class="">
+      <p>PAYPAL__donations&business=raarlabef.html</p>
+    </div>
+
+
+    <div class="about">
+      <a href="">
+          <img src="images/icons/rtf.png" alt="">
+      </a>
+    </div>
+
+    <div class="">
+      <p>RAAR.rtf</p>
+    </div>
+
+
+    <div class="logo">
+      <a href="">
+          <img src="images/icons/raar.jpg" alt="">
+      </a>
+    </div>
+
+    <div class="">
+      <p>visual.png</p>
+    </div>
+  </div> -->
   </div>
