--- a/src/css/styles/base.css
+++ b/src/css/styles/base.css
@@ -1,115 +1,90 @@
+/* -- general styles -- */
+
 * {
-    box-sizing: border-box;
-  }
+  box-sizing: border-box;
+}
 
-  body, html {
-    height: 100%;
-  }
-  
-  body {
-    width: 100%;
-    margin: 3vh auto;
-    overflow: hidden;
-    justify-content: center;
-    display: flex;
-  }
-  
-  img,
-  p {
-    vertical-align: middle;
-  }
-    
-  img {
-    max-width: 100%;
-  }
-  
-  .landing-grid {
-    width: 90%;
-    display: grid;
-    grid-template-rows: repeat(15, 1fr);
-    grid-template-columns: repeat(1, 1fr);
-  }
+body,
+html {
+  font-family: sans-serif;
+}
 
-  .landing-grid p {
-    display: flex;
-    align-items: center;
-    color: #FFFFFF;
-    font-family: sans-serif;
-  }
-  
-  .wrap {
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-    word-break: break-all;
-    word-break: break-word;
-    hyphens: auto;
-  }
-  
-  .gmail {
-    grid-row-start: 1;
-    grid-row-end: 2;
-    display: flex;
-    transform: translate(0em);
-  }
-  
-  .twitter {
-    grid-row-start: 3;
-    grid-row-end: 4;
-    display: flex;
-    transform: translateX(3.8em) translateY(2em);
-  }
-  
-  .facebook {
-    grid-row-start: 4;
-    grid-row-end: 5;
-    display: flex;
-  }
-  
-  .vinyl {
-    grid-row-start: 7;
-    grid-row-end: 8;
-    display: flex;
-  }
-  
-  .digital {
-    grid-row-start: 8;
-    grid-row-end: 9;
-    display: flex;
-    transform: translateX(0em) translateY(0em);
-  }
-  
-  .code {
-    grid-row-start: 16;
-    grid-row-end: 17;
-    display: flex;
-    transform: translate(0em);
-  }
-  
-  .releases {
-    grid-row-start: 10;
-    grid-row-end: 11;
-    display: flex;
-    transform: translate(0em);
-  }
-  
-  .paypal {
-    grid-row-start: 11;
-    grid-row-end: 12;
-    display: flex;
-    transform: translate(0em);
-  }
-  
-  .about {
-    grid-row-start: 13;
-    grid-row-end: 14;
-    display: flex;
-    transform: translateX(0em) translateY(0em);
-  }
-  
-  .logo {
-    grid-row-start: 14;
-    grid-row-end: 15;
-    display: flex;
-  }
-  
-  
+body {
+  margin: 0px;
+  overflow-x: hidden;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+a:link {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+a:active {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+p {
+  color: #ffffff;
+  font-family: sans-serif;
+}
+
+.text-wrap {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-all;
+  word-break: break-word;
+  hyphens: auto;
+}
+
+.background {
+  background: no-repeat center center;
+  width: 100%;
+  min-height: 100%; /* for mobile and tablets */
+  background-size: cover;
+  padding: 25px;
+  position: absolute;
+}
+
+/* -- layout [**MOBILE**] (see mq-tab.css && mq-desk.css for tablet/desktop layouts -- */
+
+.grid {
+  display: grid;
+  grid-template-columns: minmax(100px, 116px), minmax(50px, 250px);
+  grid-template-rows: repeat(15, 1fr);
+}
+
+.grid div {
+  display: flex;
+  align-items: center;
+}
+
+.gmail {
+  grid-row-start: 2;
+  grid-row-end: 3;
+  column-row-start: 1;
+  column-row-end: 2;
+}
+
+.gmail-text {
+  grid-row-start: 2;
+  grid-row-end: 3;
+  column-row-start: 2;
+  column-row-end: 3;
+  transform: translateX(-0.6em) translateY(0.4em);
+}
