--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -4,6 +4,7 @@
 <head>
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
   <meta name="generator" content="2015.0.0.309" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <base href="{{ $.Site.BaseURL }}">
   <title>{{ $.Site.Title }}</title>
