update mobile grid styles

--- a/site/layouts/partials/landing.html
+++ b/site/layouts/partials/landing.html
@@ -10,28 +10,29 @@
       <p>Boîte de réception (5) - raarlabel@gmail.com - Gmail</p>
     </div>
 
-    <!-- <div class="twitter">
+    <div class="tw">
       <a href="">
           <img src="images/icons/at.png" alt="">
       </a>
     </div>
 
-    <div class="">
+    <div class="tw-text">
       <p>RAAR Label (@LabelRAAR) | twitter</p>
     </div>
 
-
-    <div class="facebook">
+    <div class="fb">
       <a href="">
           <img src="images/icons/at.png" alt="">
       </a>
     </div>
 
-    <div class="">
+    <div class="fb-text">
       <p>RAAR Label | facebook</p>
     </div>
 
 
+
+    <!-- 
     <div class="vinyl">
       <a href="">
           <img src="images/icons/webloc.png" alt="">
