adjust mobile grid row width

--- a/src/css/styles/base.css
+++ b/src/css/styles/base.css
@@ -65,9 +65,10 @@ p {
 
 .grid {
   display: grid;
-  grid-template-columns: minmax(100px, 116px), minmax(50px, 250px);
+  grid-template-columns: minmax(100px, 200px), minmax(50px);
   grid-template-rows: repeat(15, 1fr);
 }
+
 
 .grid div {
   display: flex;
