add all mobile styles

--- a/site/layouts/partials/landing.html
+++ b/site/layouts/partials/landing.html
@@ -30,19 +30,15 @@
       <p>RAAR Label | facebook</p>
     </div>
 
-
-
-    <!-- 
     <div class="vinyl">
       <a href="">
           <img src="images/icons/webloc.png" alt="">
       </a>
     </div>
 
-    <div class="">
+    <div class="vinyl-text">
       <p>ORDER ¬ Vinyl | Factory RAAR04</p>
     </div>
-
 
     <div class="digital">
       <a href="">
@@ -50,7 +46,7 @@
       </a>
     </div>
 
-    <div class="">
+    <div class="digital-text">
       <p>ORDER ¬ Digital | Factory RAAR04</p>
     </div>
 
@@ -61,10 +57,9 @@
       </a>
     </div>
 
-    <div class="">
+    <div class="code-text text-wrap">
       <p>wwwCode%45%72%73%6f%6e%20%52%79%62%6f%64</p>
     </div>
-
 
     <div class="releases">
       <a href="">
@@ -72,10 +67,9 @@
       </a>
     </div>
 
-    <div class="">
+    <div class="rel-text">
       <p>ReleaseDownload</p>
     </div>
-
 
     <div class="paypal">
       <a href="">
@@ -83,30 +77,28 @@
       </a>
     </div>
 
-    <div class="">
+    <div class="pay-text text-wrap">
       <p>PAYPAL__donations&business=raarlabef.html</p>
     </div>
 
+    <div class="logo">
+      <a href="">
+            <img src="images/icons/raar.jpg" alt="">
+        </a>
+    </div>
 
-    <div class="about">
+    <div class="logo-text">
+      <p>visual.png</p>
+    </div>
+
+    <div class="abt">
       <a href="">
           <img src="images/icons/rtf.png" alt="">
       </a>
     </div>
 
-    <div class="">
+    <div class="abt-text">
       <p>RAAR.rtf</p>
     </div>
-
-
-    <div class="logo">
-      <a href="">
-          <img src="images/icons/raar.jpg" alt="">
-      </a>
-    </div>
-
-    <div class="">
-      <p>visual.png</p>
-    </div>
-  </div> -->
   </div>
+</div>
