--- a/src/css/styles/base.css
+++ b/src/css/styles/base.css
@@ -66,9 +66,8 @@ p {
 .grid {
   display: grid;
   grid-template-columns: minmax(100px, 200px), minmax(50px);
-  grid-template-rows: repeat(15, 1fr);
+  grid-template-rows: repeat(11, 1fr);
 }
-
 
 .grid div {
   display: flex;
@@ -76,18 +75,18 @@ p {
 }
 
 .gmail {
-  grid-row-start: 2;
-  grid-row-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
   column-row-start: 1;
   column-row-end: 2;
 }
 
 .gmail-text {
-  grid-row-start: 2;
-  grid-row-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
   column-row-start: 2;
   column-row-end: 3;
-  transform: translateX(-0.6em) translateY(0.4em);
+  transform: translateX(-0.6em) translateY(-0.2em);
 }
 
 .tw {
@@ -120,4 +119,116 @@ p {
   column-row-start: 2;
   column-row-end: 3;
   transform: translateX(-2.1em) translateY(-0.6em);
+}
+
+.vinyl {
+  grid-row-start: 4;
+  grid-row-end: 5;
+  column-row-start: 1;
+  column-row-end: 2;
+  transform: translateX(2.8em) translateY(0.6em);
+}
+
+.vinyl-text {
+  grid-row-start: 4;
+  grid-row-end: 5;
+  column-row-start: 2;
+  column-row-end: 3;
+  transform: translateX(2.3em) translateY(0.6em);
+}
+
+.digital {
+  grid-row-start: 5;
+  grid-row-end: 6;
+  column-row-start: 1;
+  column-row-end: 2;
+  transform: translateX(3.6em) translateY(-0.7em);
+}
+
+.digital-text {
+  grid-row-start: 5;
+  grid-row-end: 6;
+  column-row-start: 2;
+  column-row-end: 3;
+  transform: translateX(3.1em) translateY(-0.3em);
+}
+
+.code {
+  grid-row-start: 10;
+  grid-row-end: 11;
+  column-row-start: 1;
+  column-row-end: 2;
+  transform: translateX(1em) translateY(2.3em);
+}
+
+.code-text {
+  grid-row-start: 10;
+  grid-row-end: 11;
+  column-row-start: 2;
+  column-row-end: 3;
+  transform: translateX(1.1em) translateY(2.3em);
+}
+
+.releases {
+  grid-row-start: 6;
+  grid-row-end: 7;
+  column-row-start: 1;
+  column-row-end: 2;
+  transform: translateX(0.6em) translateY(1.3em);
+}
+
+.rel-text {
+  grid-row-start: 6;
+  grid-row-end: 7;
+  column-row-start: 2;
+  column-row-end: 3;
+  transform: translateX(0.1em) translateY(0.7em);
+}
+
+.paypal {
+  grid-row-start: 7;
+  grid-row-end: 8;
+  column-row-start: 1;
+  column-row-end: 2;
+  transform: translateX(-0.1em) translateY(2.3em);
+}
+
+.pay-text {
+  grid-row-start: 7;
+  grid-row-end: 8;
+  column-row-start: 2;
+  column-row-end: 3;
+  transform: translateX(-0.5em) translateY(2.5em);
+}
+
+.logo {
+  grid-row-start: 9;
+  grid-row-end: 10;
+  column-row-start: 1;
+  column-row-end: 2;
+  transform: translateX(3.6em) translateY(1.3em);
+}
+
+.logo-text {
+  grid-row-start: 9;
+  grid-row-end: 10;
+  column-row-start: 2;
+  column-row-end: 3;
+  transform: translateX(4.3em) translateY(1.5em);
+}
+
+.abt {
+  grid-row-start: 8;
+  grid-row-end: 9;
+  column-row-start: 1;
+  column-row-end: 2;
+  transform: translateX(5.9em) translateY(3em);
+}
+
+.abt-text {
+  grid-row-start: 8;
+  grid-row-end: 9;
+  column-row-start: 2;
+  column-row-end: 3;
+  transform: translateX(5.3em) translateY(2.7em);
 }
