add glitch background to /obi

--- a/site/layouts/obi/single.html
+++ b/site/layouts/obi/single.html
@@ -1,3 +1,5 @@
-{{ partial "header" . }} 
+{{ partial "obi/header" . }} 
 
-{{ partial "footer-obi" . }}
+{{ partial "obi/main.html" . }}
+
+{{ partial "obi/footer.html" . }}
