--- a/site/layouts/partials/landing.html
+++ b/site/layouts/partials/landing.html
@@ -1,8 +1,8 @@
-<div class="background" id="p5">
+<div class="background">
   <div class="grid">
     <div class="gmail">
       <a href="">
-          <img src="images/icons/webloc.png" alt="">
+          <img class="gm-img" src="images/icons/webloc.png" alt="">
       </a>
     </div>
 
@@ -30,6 +30,7 @@
       <p>RAAR Label | facebook</p>
     </div>
 
+
     <div class="vinyl">
       <a href="">
           <img src="images/icons/webloc.png" alt="">
@@ -39,6 +40,7 @@
     <div class="vinyl-text">
       <p>ORDER ¬ Vinyl | Factory RAAR04</p>
     </div>
+
 
     <div class="digital">
       <a href="">
