--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,7 @@
 @import 'normalize.css';
 @import 'styles/base.css';
-@import 'styles/mq-desk.css';
-@import 'styles/mq-tab.css';
-@import 'styles/p5.css';
+@import 'styles/mq-landing/mq-desk.css';
+@import 'styles/mq-landing/mq-tab.css';
+@import 'styles/p5/p5.css';
+@import 'styles/artist-pages/obi.css';
+@import 'styles/p5/glitch.css';
