add obizine page

--- a/src/css/styles/artist-pages/obi.css
+++ b/src/css/styles/artist-pages/obi.css
@@ -1,3 +1,153 @@
+
+body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    perspective: 1px;
+}
+
 p.obi {
     color: black;
 }
+
+.section {
+    display: flex;
+    align-items: center;
+    position: relative;
+    min-height: 1190px;
+    min-width: 1190px;
+    box-sizing: border-box;
+    background: 50% 50% / cover;
+  }
+
+  #obi00 {
+    background-image: url(images/obi-zine/obi00.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi01 {
+    background-image: url(images/obi-zine/obi01.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi02 {
+    background-image: url(images/obi-zine/obi02.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi03 {
+    background-image: url(images/obi-zine/obi03.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi04 {
+    background-image: url(images/obi-zine/obi04.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi05 {
+    background-image: url(images/obi-zine/obi05.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi06 {
+    background-image: url(images/obi-zine/obi06.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi07 {
+    background-image: url(images/obi-zine/obi07.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi08 {
+    background-image: url(images/obi-zine/obi08.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi09 {
+    background-image: url(images/obi-zine/obi09.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi10 {
+    background-image: url(images/obi-zine/obi10.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi11 {
+    background-image: url(images/obi-zine/obi11.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi12 {
+    background-image: url(images/obi-zine/obi12.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi13 {
+    background-image: url(images/obi-zine/obi13.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi14 {
+    background-image: url(images/obi-zine/obi14.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi15 {
+    background-image: url(images/obi-zine/obi15.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi16 {
+    background-image: url(images/obi-zine/obi16.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi17 {
+    background-image: url(images/obi-zine/obi17.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi18 {
+    background-image: url(images/obi-zine/obi18.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi19 {
+    background-image: url(images/obi-zine/obi19.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi20 {
+    background-image: url(images/obi-zine/obi20.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi21 {
+    background-image: url(images/obi-zine/obi21.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi22 {
+    background-image: url(images/obi-zine/obi22.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi23 {
+    background-image: url(images/obi-zine/obi23.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi24 {
+    background-image: url(images/obi-zine/obi24.jpg);
+    background-attachment: fixed;
+  }
+
+  #obi25 {
+    background-image: url(images/obi-zine/obi25.jpg);
+    background-attachment: fixed;
+  }
