--- a/site/layouts/obizine/single.html
+++ b/site/layouts/obizine/single.html
@@ -1,5 +1,6 @@
-{{ partial "header" . }} 
+{{ partial "obizine/header.html" . }} 
 
-{{ partial "obiblanche/zine.html" . }}
+{{ partial "obizine/zine.html" . }}
 
-{{ partial "footer" . }}
+
+{{ partial "obiblanche/footer.html" . }}
