--- a/src/css/styles/artist-pages/obi.css
+++ b/src/css/styles/artist-pages/obi.css
@@ -1,18 +1,17 @@
+* {
+    box-sizing: border-box;
+  }
 
-body {
+  body#obi {
     margin: 0;
     padding: 0;
     height: 100%;
     overflow-y: scroll;
     overflow-x: hidden;
     perspective: 1px;
-}
+  }
 
-p.obi {
-    color: black;
-}
-
-.section {
+  .section {
     display: flex;
     align-items: center;
     position: relative;
@@ -22,132 +21,137 @@ p.obi {
     background: 50% 50% / cover;
   }
 
-  #obi00 {
-    background-image: url(images/obi-zine/obi00.jpg);
+p.obi {
+    color: black;
+}
+
+#obi00 {
+    background-image: url("/images/obi/obi00.jpg");
     background-attachment: fixed;
   }
 
+
   #obi01 {
-    background-image: url(images/obi-zine/obi01.jpg);
+    background-image: url("/images/obi/obi01.jpg");
     background-attachment: fixed;
   }
 
   #obi02 {
-    background-image: url(images/obi-zine/obi02.jpg);
+    background-image: url("/images/obi/obi02.jpg");
     background-attachment: fixed;
   }
 
   #obi03 {
-    background-image: url(images/obi-zine/obi03.jpg);
+    background-image: url("/images/obi/obi03.jpg");
     background-attachment: fixed;
   }
 
   #obi04 {
-    background-image: url(images/obi-zine/obi04.jpg);
+    background-image: url("/images/obi/obi04.jpg");
     background-attachment: fixed;
   }
 
   #obi05 {
-    background-image: url(images/obi-zine/obi05.jpg);
+    background-image: url("/images/obi/obi05.jpg");
     background-attachment: fixed;
   }
 
   #obi06 {
-    background-image: url(images/obi-zine/obi06.jpg);
+    background-image: url("/images/obi/obi06.jpg");
     background-attachment: fixed;
   }
 
   #obi07 {
-    background-image: url(images/obi-zine/obi07.jpg);
+    background-image: url("/images/obi/obi07.jpg");
     background-attachment: fixed;
   }
 
   #obi08 {
-    background-image: url(images/obi-zine/obi08.jpg);
+    background-image: url("/images/obi/obi08.jpg");
     background-attachment: fixed;
   }
 
   #obi09 {
-    background-image: url(images/obi-zine/obi09.jpg);
+    background-image: url("/images/obi/obi09.jpg");
     background-attachment: fixed;
   }
 
   #obi10 {
-    background-image: url(images/obi-zine/obi10.jpg);
+    background-image: url("/images/obi/obi10.jpg");
     background-attachment: fixed;
   }
 
   #obi11 {
-    background-image: url(images/obi-zine/obi11.jpg);
+    background-image: url("/images/obi/obi11.jpg");
     background-attachment: fixed;
   }
 
   #obi12 {
-    background-image: url(images/obi-zine/obi12.jpg);
+    background-image: url("/images/obi/obi12.jpg");
     background-attachment: fixed;
   }
 
   #obi13 {
-    background-image: url(images/obi-zine/obi13.jpg);
+    background-image: url("/images/obi/obi13.jpg");
     background-attachment: fixed;
   }
 
   #obi14 {
-    background-image: url(images/obi-zine/obi14.jpg);
+    background-image: url("/images/obi/obi14.jpg");
     background-attachment: fixed;
   }
 
   #obi15 {
-    background-image: url(images/obi-zine/obi15.jpg);
+    background-image: url("/images/obi/obi15.jpg");
     background-attachment: fixed;
   }
 
   #obi16 {
-    background-image: url(images/obi-zine/obi16.jpg);
+    background-image: url("/images/obi/obi16.jpg");
     background-attachment: fixed;
   }
 
   #obi17 {
-    background-image: url(images/obi-zine/obi17.jpg);
+    background-image: url("/images/obi/obi17.jpg");
     background-attachment: fixed;
   }
 
   #obi18 {
-    background-image: url(images/obi-zine/obi18.jpg);
+    background-image: url("/images/obi/obi18.jpg");
     background-attachment: fixed;
   }
 
   #obi19 {
-    background-image: url(images/obi-zine/obi19.jpg);
+    background-image: url("/images/obi/obi19.jpg");
     background-attachment: fixed;
   }
 
   #obi20 {
-    background-image: url(images/obi-zine/obi20.jpg);
+    background-image: url("/images/obi/obi20.jpg");
     background-attachment: fixed;
   }
 
   #obi21 {
-    background-image: url(images/obi-zine/obi21.jpg);
+    background-image: url("/images/obi/obi21.jpg");
     background-attachment: fixed;
   }
 
   #obi22 {
-    background-image: url(images/obi-zine/obi22.jpg);
+    background-image: url("/images/obi/obi22.jpg");
     background-attachment: fixed;
   }
 
   #obi23 {
-    background-image: url(images/obi-zine/obi23.jpg);
+    background-image: url("/images/obi/obi23.jpg");
     background-attachment: fixed;
   }
 
   #obi24 {
-    background-image: url(images/obi-zine/obi24.jpg);
+    background-image: url("/images/obi/obi24.jpg");
     background-attachment: fixed;
   }
 
   #obi25 {
-    background-image: url(images/obi-zine/obi25.jpg);
+    background-image: url("/images/obi/obi25.jpg");
     background-attachment: fixed;
   }
