change front and back page of zine

--- a/site/layouts/partials/obizine/zine.html
+++ b/site/layouts/partials/obizine/zine.html
@@ -1,3 +1,4 @@
+<div id="obi00_0" class="section"></div>
 <div id="obi00" class="section"></div>
 <div id="obi01" class="section"></div>
 <div id="obi02" class="section"></div>
