--- a/src/css/styles/artist-pages/signup.css
+++ b/src/css/styles/artist-pages/signup.css
@@ -11,6 +11,17 @@
     align-items: center;
 }
 
+.mc-field-group {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 input.button {
     margin: 2em;
+    background-color: black;
+    color: white;
+    border-style: none;
+    padding: 0.8em 2.2em;
+    font-size: 19px;
 }
